--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,11 +1,7 @@
-log4j.rootLogger=debug, stdout, R
+# setting Level.
+log4j.rootLogger=debug, stdout
+# setting console.
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p - %m%n
-log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=firestorm.log
-log4j.appender.R.MaxFileSize=100KB
-log4j.appender.R.MaxBackupIndex=1
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
-log4j.logger.com.codefutures=DEBUG
+log4j.appender.stdout.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
